src/web/assets/cp/src/css/_main.scss
/* ... */
.CodeMirror {
  height: auto !important;
  min-height: 70px;

  &.CodeMirror-focused {
    @include mixins.input-focused-styles;
  }

  &.cm-s-readonly {
    &,
    * {
      cursor: not-allowed;
    }
  }
}

.link-input {
  container-type: inline-size;

  & > .flex {
    & > div {
      &.text-link {
        border: var(--input-border);
        border-radius: var(--large-border-radius);
        background-color: var(--input-bg);
        cursor: text;

        &:has(.text:focus) {
          box-shadow: var(--focus-ring);
        }

        & > .text,
        & > .chip {
          margin-block: -1px;
          background-color: transparent;
        }

        & > .text {
          border: none;
          margin-inline: -1px;

          &:focus {
            position: relative;
          }

          &:focus {
            box-shadow: none !important;
          }
        }

        .chip {
          min-height: calc(34rem / 16);
          padding-inline: var(--s);

          .chip-content {
            a {
              word-break: break-word;
            }
          }
        }
      }
    }

    @container (max-width: calc(399rem/16)) {
      & {
        flex-direction: column;
        align-items: stretch;

        & > .select,
        & > .select select,
        & > div[data-link-type] .text,
        & > div[data-link-type] .chip {
          display: flex;
          width: 100%;
        }

        & > div[data-link-type] ul.elements {
          align-items: stretch;
        }
      }
    }
  }
}

.chars-left {
  position: relative;
  float: inline-end;
  margin-inline: 7px;
  margin-block: calc(-27rem / 16) 0;
  color: var(--light-text-color);

  .input.ltr > & {
    float: inline-end;
  }

  .input.rtl > & {
    float: inline-start;
  }

  &.negative-chars-left {
    color: var(--error-color);
  }
}

.field,
fieldset {
  position: relative;
  margin-block: 24px;
  margin-inline: 0;

  .flex > & {
    margin-block: 0;
  }
}

.status-badge {
  position: absolute;
  inset-block-start: 0;
  inset-inline-start: 0;
  width: 2px;
  height: 100%;
  content: '';
  cursor: help;
  z-index: 1;

  &.modified {
    background-color: var(--blue-600);
    box-shadow: 0 0 5px hsl(221deg 83% 53% / 15%);
  }

  &.outdated {
    background-color: var(--pending-color);
    box-shadow: 0 0 5px hsl(27deg 96% 61% / 15%);
  }
}

.field {
  min-inline-size: initial;

  & > .status-badge {
    border-radius: 1px;
  }

  & > .heading {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    align-items: center;
    position: relative;
    margin-block: -5px 5px;
    min-height: calc(22rem / 16);

    & > label,
    & > legend {
      display: flex;
      flex-wrap: wrap;
      gap: 5px;
      align-items: center;
      font-weight: bold;

      code {
        font-size: 1em !important;
      }

      .info {
        margin-inline-start: 5px;
      }
    }

    .required::after {
      margin-inline-start: 0;
    }

    .t9n-indicator {
      position: relative;
      inset-block-start: calc(-1rem / 16);
      margin-inline: 2px;
      color: var(--light-text-color);

      &.copyable {
        cursor: pointer;
      }
    }

    & + .instructions {
      margin-block-start: -3px;
    }

    // BC
    & > .instructions {
      width: 100%;
    }
  }

  & > .instructions {
    margin-block-end: 5px;
  }

  & > .input {
    position: relative;

    & + .instructions {
      margin-block: 5px 0;
      margin-inline: 0;
    }

    input:disabled,
    textarea:disabled,
    select:disabled,
    button:disabled {
      cursor: not-allowed;
    }
  }

  & > .notice,
  & > .warning {
    margin-block: 5px 0;
    margin-inline: 0;
  }

  /* radio and checkbox */
  .custom-option-wrapper {
    display: inline-block;
  }

  .custom-option-input {
    margin-inline-start: var(--xs);
  }
}

.field > .instructions,
.markdown,
  // BC
.field > .heading > .instructions,
.checkboxfield .instructions {
  img,
  video,
  embed,
  iframe {
    max-width: 100% !important;
  }

  ul,
  ol {
    margin-block: 1em;
    margin-inline: 0;
    padding-inline-start: 2em;
  }

  ul li {
    list-style-type: disc;
  }

  li + li {
    margin-block-start: 0.25em;
  }
}

.field > .instructions,
  // BC
.field > .heading > .instructions,
.checkboxfield .instructions {
  color: var(--custom-text-color, var(--medium-text-color));
}

// Special adjustments for content formatted via Markdown
.markdown {
  color: var(--custom-text-color, var(--text-color));

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-block-end: 0.3em;
  }

  p {
    margin-block: 0.25em;
  }
}

.cross-site-copy-modal {
  max-width: 380px;
}

.expand-status-btn {
  margin-inline-start: 5px;
  width: calc(30rem / 16);
  height: calc(17rem / 16);
  padding: 0;
  line-height: 16px;
  border-radius: var(--small-border-radius);
  color: var(--text-color);

  &::before {
    margin: 0;
  }
}

/* toggles and nested fields */
.nested-fields {
  margin: -24px;
  padding-block: 24px 0;
  padding-inline: 24px;

  &.hidden {
    display: block;
    height: 0;
  }

  & > .field:last-child {
    padding-block-end: 24px;
  }
}

/* checkbox */
.checkbox-group {
  display: flex;
  flex-direction: column;
  gap: calc(5rem / 16);

  .btn.add {
    max-width: calc(200rem / 16);
  }
}

input.checkbox {
  opacity: 0;
  position: absolute;
  width: var(--checkbox-size);
  height: var(--checkbox-size);

  & + label:has(> .text) {
    &::before {
      inset-block-start: 6px;
    }
  }
}
/* ... */

